# DEM-OpenCL

./: .clang-format  .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  CMakeLists.txt  Common.cpp  Common.h  Core.ini  DEM.pro.user.4.9-pre1  Deflater.cpp  Deflater.h  EasyZLib.cpp  EasyZLib.h  Edge.cpp.cl  Edge.h.cl  Error.cpp  Error.h  Face.cpp  Face.cpp.cl  Face.h  Face.h.cl  FrameSender.cpp  FrameSender.h  LICENSE.md  LogSender.cpp  LogSender.h  Material.cpp  Material.h  Material.h.cl  MaterialsManager.cpp  MaterialsManager.h  MaterialsManager.h.cl  Neighborhood.cpp.cl  Neighborhood.h  NonSolidObject.cpp  NonSolidObject.h  ObjectsManager.cpp  ObjectsManager.h  Particle.cpp  (+33 more)
Core/: CMakeLists.txt  Color.cpp  Color.h  Core.pro  Deflater.cpp  Deflater.h  Edge.cl  Error.cpp  Error.h  Face.cl  Face.cpp  Face.cpp.cl  Face.h  Face.h.cl  FaceWorker.cl  FaceWorker.cpp.cl  FrameSender.cpp  FrameSender.h  LogSender.cpp  LogSender.h  Main.cl  Material.cl  Material.cpp  Material.cpp.cl  Material.h  MaterialsManager.cl  MaterialsManager.cpp  MaterialsManager.cpp.cl  MaterialsManager.h  Neighborhood.cl  Neighborhood.cpp  Neighborhood.cpp.cl  Neighborhood.h  Neighborhood.h.cl  NonSolidObject.cpp  NonSolidObject.h  ObjectsManager.cpp  ObjectsManager.h  OpenCL.cpp  OpenCL.h  (+54 more)
Test/: CMakeLists.txt  Material.json  MaterialsManager.json  NonSolidObjectInstance.json  NonSolidObjectWireframe.json  ObjectsManager.json  Scenery.json  Simulation.json  SolidObject.json  Test.pro  TestMaterial.cpp  TestMaterial.h  TestMaterialsManager.cpp  TestMaterialsManager.h  TestNonSolidObject.cpp  TestNonSolidObject.h  TestObjectsManager.h  TestOpenCL.cpp  TestOpenCL.h  TestParticle.cpp  TestParticle.h  TestScenery.cpp  TestScenery.h  TestSimulation.cpp  TestSimulation.h  TestSolidObject.cpp  TestSolidObject.h  TestVector3D.h  main.cpp
deploy_libs/: librestclient-cpp.so.1.1.1
graphify-out/: .gitignore  GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
libs/: CMakeLists.txt
libs/OpenCLWrapper/: OCLW_CU.hpp  OCLW_Core.hpp  OCLW_Kernel.hpp
libs/QtWebApp/: CMakeLists.txt
libs/QtWebApp/httpserver/: httpconnectionhandlerpool.cpp  staticfilecontroller.h
libs/easyzlib/: easyzlib.c
libs/tetgen1.5.1/: box.stl  tetgen
opencl/: Edge.cpp.cl  Edge.h.cl  Error.h.cl  Face.cpp.cl  Face.h.cl  FaceWorker.cpp.cl  Material.cpp.cl  Material.h.cl  MaterialsManager.cpp.cl  MaterialsManager.h.cl  Neighborhood.cpp.cl  Neighborhood.h.cl  Particle.cpp.cl  Particle.h.cl  ParticleWorker.cpp.cl  ReducedParticle.cl  ReducedVertex.cl  Scenery.h.cl  Simulation.cpp.cl  Simulation.h.cl  TestBox.cpp.cl  Tests.cpp.cl  TestsEdge.cpp.cl  TestsFace.cpp.cl  TestsMaterial.cpp.cl  TestsObject.cpp.cl  TestsParticle.cpp.cl  TestsParticleWorker.cpp.cl  TestsSmoke.cpp.cl  TestsVector.cpp.cl  Vector.cpp.cl  Vertex.cpp.cl  Vertex.h.cl
tests/: CMakeLists.txt  Material.json  NonSolidObjectWireframe.json  ObjectsManager.json  Particle.json  Scenery.json  Simulation.json  SolidObject.json  Test.cl  TestFace.cpp  TestFace.h  TestHelpers.h  TestMaterial.cpp  TestMaterial.h  TestMaterialsManager.cpp  TestMaterialsManager.h  TestNonSolidObject.cpp  TestNonSolidObject.h  TestObjectsManager.cpp  TestObjectsManager.h  TestOpenCL.cpp  TestParticle.cpp  TestParticle.h  TestScenery.cpp  TestScenery.h  TestSolidObject.cpp  TestSolidObject.h  TestVector3D.cpp  TestVector3D.h  TestVertex.cpp  TestVertex.h  main.cpp
tests/integration/: CMakeLists.txt  FakeSimulationSink.cpp  FakeSimulationSink.h  SimulationTestHarness.cpp  SimulationTestHarness.h  TestRequestMapper.cpp  TestRequestMapper.h  TestSimulationCollisions.cpp  TestSimulationCollisions.h  TestSimulationConfig.cpp  TestSimulationConfig.h  TestSimulationContacts.cpp  TestSimulationContacts.h  TestSimulationPhysics.cpp  TestSimulationPhysics.h  main.cpp
tests/opencl/: CMakeLists.txt  KernelTestHarness.cpp  KernelTestHarness.h  TestCalculateFaceToFace.cpp  TestCalculateFaceToFace.h  TestCalculateFaceToParticle.cpp  TestCalculateFaceToParticle.h  TestCalculateParticleToFace.cpp  TestCalculateParticleToFace.h  TestCalculateParticleToParticle.cpp  TestCalculateParticleToParticle.h  TestEdge.cpp  TestEdge.h  TestFace.cpp  TestFace.h  TestHelpers.h  TestMaterial.cpp  TestMaterial.h  TestNonConvexObject.cpp  TestNonConvexObject.h  TestObject.cpp  TestObject.h  TestObjectToObject.cpp  TestObjectToObject.h  TestParticle.cpp  TestParticle.h  TestParticleWorker.cpp  TestParticleWorker.h  TestSmoke.cpp  TestSmoke.h  TestVector.cpp  TestVector.h  Tests.cpp.cl  TestsFaceWorker.cpp.cl  TestsObject.cpp.cl  TestsParticle.cpp.cl  TestsSmoke.cpp.cl  TestsVector.cpp.cl  main.cpp
